Added Footer section

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <button class="btn-primary  text-btn-gap">Ger Started Free</button>
                 </div>
                 <div>
-                    <img class="tertiary-image "src="./Assets/wc-big.png" alt="Image">
+                    <img class="tertiary-image " src="./Assets/wc-big.png" alt="Image">
                 </div>
             </div>
         </section>
@@ -140,17 +140,31 @@
                     <input type="email" name="" id="" placeholder="example@email.com" class="form-resize"><br>
 
                     <label for="" class="text-color-change">Name</label><br>
-                    <input type="text" name="" id="" placeholder="full name"class="form-resize"><br>
+                    <input type="text" name="" id="" placeholder="full name" class="form-resize"><br>
 
                     <label for="" class="text-color-change">Message</label><br>
-                    <textarea name="" id="" cols="50" rows="20" placeholder="write your message...." class="form-resize"></textarea><br>
+                    <textarea name="" id="" cols="50" rows="20" placeholder="write your message...."
+                        class="form-resize"></textarea><br>
                     <button class="btn-primary">Get in Touch</button>
                 </form>
             </div>
         </section>
     </main>
-    <footer>
-        
+    <footer class="footer-design">
+        <div>
+            <h1 class="logo inter-normal logo-design">LOGO</h1>
+            <p class="section-description">Ready to elevate your online presence? Contact us today to discuss your
+                project and discover how we can bring your vision to life.</p>
+        </div>
+        <div>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>How it Works</li>
+                <li>Services</li>
+            </ul>
+        </div>
+
     </footer>
 </body>
 
