Added animation Effect

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <header class="header">
         <nav>
             <h3 class="logo inter-normal">LOGO</h3>
-            <button class="btn-primary">Sign Up</button>
+            <button class="btn-primary btn-change">Sign Up</button>
         </nav>
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-greetings">Cool Dark UI Template for Webflow Agencies!</h1>
-                <button class="btn-primary text center">Stay Focused</button>
+                <button class="btn-primary text center btn-change">Stay Focused</button>
             </div>
         </div>
     </header>
@@ -37,7 +37,7 @@
                     <h3 class="section-title">See It in Action</h3>
                     <p class="section-description">Explore the live preview and imagine your brand in this bold new
                         look.</p>
-                    <button class="btn-primary">Launch Live Preview</button>
+                    <button class="btn-primary btn-change">Launch Live Preview</button>
                 </div>
                 <div>
                     <img class="primary-image" src="./Assets/wc-mini.png" alt="Image">
@@ -123,7 +123,7 @@
                 <div>
                     <h1 class="section-title">Ready to focus better</h1>
                     <p class="section-description">This template instantly leveled up our presence.” – Studio Vertex</p>
-                    <button class="btn-primary  text-btn-gap">Ger Started Free</button>
+                    <button class="btn-primary  text-btn-gap btn-change">Ger Started Free</button>
                 </div>
                 <div>
                     <img class="tertiary-image " src="./Assets/wc-big.png" alt="Image">
@@ -145,7 +145,7 @@
                     <label for="" class="text-color-change">Message</label><br>
                     <textarea name="" id="" cols="50" rows="20" placeholder="write your message...."
                         class="form-resize"></textarea><br>
-                    <button class="btn-primary">Get in Touch</button>
+                    <button class="btn-primary btn-change" width="100%">Get in Touch</button>
                 </form>
             </div>
         </section>
